--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "author": "vinay sv",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-facebook-login": "^4.1.1",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
+    "reactstrap": "^8.0.1",
     "redux": "^4.0.4"
   },
   "devDependencies": {
@@ -29,7 +31,9 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "html-webpack-plugin": "^3.2.0",
+    "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
+    "validator": "^11.1.0",
     "webpack": "^4.35.3",
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.7.2"
